istio/deployment-pythonproject.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-reach-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: adurikedharnadh/python-reach-backend:v1


---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 5005
    targetPort: 5005

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-reach-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: adurikedharnadh/python-api:v1
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
